# vizier

./: .gitignore  README.md  database.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: codebase.txt  database.py  dummyapi.py  key.env  main.py  setup.cfg  test.py
backend/docs/: API.md  Vizier Process Diagram - BitCamp 2025.drawio.xml
backend/processes/: main.py
backend/processes/connectors/: router_0.py  router_04.py
backend/processes/query/: refiner.py
backend/processes/report/: refiner.py  writer.py
backend/processes/search/: agents.py  twitter.py  web.py
backend/processes/sourcing/: agent.py  director.py
backend/processes/writer/: generator.py
backend/routers/: drafts.py  openrouter.py  queries.py  user.py
backend/vizier_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: openrouter-docs.txt
docs/backend/twitter/: SEARCH.md
frontend/: codebase.txt  package-lock.json  package.json
frontend/src/app/: App.tsx  index.css
frontend/src/components/navigation/: navbar.css  navbar.tsx
frontend/src/components/querybar/: QueryProgressBar.css  QueryProgressBar.tsx  querybar.css  querybar.tsx
frontend/src/services/: api.ts
processes/connectors/: router_0.py
processes/query/: refiner.py
routers/: auth.py  drafts.py  queries.py
vizier-frontend/: index.html  package-lock.json  package.json
vizier-frontend/src/: App.css  App.tsx
vizier-frontend/src/app/: App.css  App.tsx  main.tsx
vizier-frontend/src/components/navigation/: navbar.css  navbar.tsx
(+24 files in other folders)
