[project]
name = "vizier-backend"
version = "0.1.0"
description = "Backend for Vizier Agent Flow"
authors = [{ name = "ain3sh", email = "ainesh@ain3sh.com" }]
readme = "backend/README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "databases[asyncpg]",
    "asyncpg",
    "httpx",
    "python-jose[cryptography]",
    "python-dotenv",
    "pydantic",
    "anyio",
    "pyasn1>=0.6.1" # for compatibility with pyasn1-modules
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]