[metadata]
name = vizier-backend
version = 0.1.0
description = Backend for Vizier
author = ain3sh

[options]
packages = find:
package_dir =
    = backend
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn[standard]
    databases[asyncpg]
    asyncpg
    httpx
    python-jose[cryptography]
    python-dotenv
    pyasn1>=0.6.1
    pydantic
    anyio

[options.packages.find]
where = backend